css/custom.css
/* Move down content because we have a fixed navbar that is 50px tall */



.jumbotron {
	background-color: black;
	text-align: center;
	background-attachment: fixed;
	background-image: url('../images/Sadpass/titlecopy.jpg');
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
    height: 0;
    padding: 50% 0 0 0;
    margin: 0px;
}

 .parallax-container {
      padding-bottom: ;

    }

audio {
	width: 100%;
	margin-top: 10px;
}
.twitter-timeline {
	position: center;
}

.album{
	text-align: center;
}
.album img{
	display:inline-block;
    margin:0 5px;
    width: 100%;
}

.audio {
    position: absolute;
    width: 100%;
    left: 0;
    text-align: center;
    margin: auto;
}

.audiopad {
	padding-left: 0px;
}

.bounceInUp {
  animation-duration: .8s;
  animation-name: bounceUp;
  animation-iteration-count: 1000;
  -webkit-animation-direction: alternate;
  -o-animation-direction: alternate;
  animation-direction: alternate;
}

	@keyframes bounceUp {
	  from {
	    padding-top: 10px; 
	  }

	  to {
	    padding-top: -10px;
	  	}
}

i.fa {
	color: black;
}

body {
  padding-top: 0px;
}

ul.nav, .jumbotron h1 {
	font-family: 'Arvo', courier, serif;
}

ul.nav {
	font-size: 13px;
}

ul.Influences {
	font-family: 'Arvo', courier, serif;
	font-size: 20px;
	text-align: left;
	font-weight: 300;
	color: #686868;
}

footer {
	background-color: #383838;
	padding-top: 10px;
	padding-bottom: 10px;
}

table {
	height: 700px;
}


#who {
	background-color: black;
	text-align: left;
	padding-top: 40px;
}

#who p {
		text-align: left;
}

#threepiece {
}

.navbar {
	border-width: 0 0 1px;
	right: 0;
	left: 0;
	z-index: 1030;
	margin-bottom: 0px;
	border-radius: 0;
	border: 0px;
}

.nav-placeholder {
	min-height: 50px;
}

.collapse {
	padding-right: 0px;
}

.navbar-fixed-top {
	width: 100%;
	left: 0;
	background-color: #222;
}

.navbar-fixed-top .nav-inner {
	margin: 0 auto;
	background-color: #222;
}

.navbar-brand {
	padding: 10px;
}


.flush {
	border: 0px;
	padding: 0px 20px;
	margin: 0px;
}

.deadspace {
	height: 0px;
}

/* Arrow */
a.ScrollTo{
	margin-left:-50px;
	margin-top:-120px;
	width:100px;
	height:100px;
	border-radius:50%;
	border:2px solid #cc1313;
	font-size:80px;
	color:#fff;
	text-align:center;
	line-height:;
	position:absolute;
}

/* End Arrow */




.imgdiv {
	background-image: url('../images/Sadpass/imgdiv copy.jpg');
	background-size: cover;
	background-attachment: fixed;
	background-position: 0px 0px 0px 0px;
}

/* background image copy pasta */ 

img.bg {
  /* Set rules to fill background */
  min-height: 100%;
  min-width: 1024px;
	
  /* Set up proportionate scaling */
  width: 100%;
  height: auto;
	
  /* Set up positioning */
  position: fixed;
  top: 0;
  left: 0;
}

/* @media screen and (max-width: 1024px) { /* Specific to this particular image */
/*  img.bg {
    left: 50%;
    margin-left: 50%;   /* 50% */
  }
} 
/* end copy pasta */

.jumbotron h1 {
	margin-top: 0px;
	margin-bottom: 50px;
}

.jumbotron p {
	margin-bottom: 30px;
	font-weight: 100;
	padding: 0 50px;
}

.btn-lg {
	font-size: 36px;
}

.homepage {
	text-align: center;
	padding-bottom: 70px;
	padding-top: 20px;
}

.homepage h2, .homepage h3 {
	color: #cc1313;
	font-family: 'Lobster', cursive;
	text-transform: uppercase;
}

.homepage h2 {
	font-size: 30px;
}

.homepage h3 {
	font-size: 26px;
}

.homepage p {
	font-family: 'Roboto','Helvetica Neue',Helvetica,Arial,sans-serif;
	font-size: 21px;
	font-weight: 300;
	color: #686868;
}

.homepage strong {
	font-weight: 700;
	color: #A19F9F;
}


.homepage a {
	color: #e74c3c;
}

.homepage a:active{
	color: #e74c3c;
	text-decoration: none;
	opacity: .8;
}

.homepage hr {
	border-top: 1px solid #686868;
	width: 300px;
	margin-top: 15px;
}

.credits h2 {
	text-shadow: 4px 4px 15px #F0EAEA;
	font-size: 48px;
	font-family: 'Lobster', cursive;
	text-transform: uppercase;
	-webkit-text-stroke: 2px black;
	text-shadow:
    4px 4px 0px #000,
    1px -1px 10px #000,
    1px 1px 0px #000;
}

#socmedia {
	padding: 40px;
}


.fginner {
	height: 100%;
	width: 100%;
}

.boxes {
	box-shadow: 5px 5px 20px #888888;
	background-color: black;
	height: 250px;
	margin: 10px 0px;
	background-color: black;
	opacity: 0.7;
	border-radius: 15px;
	border: -15px;
	padding: 0;
    position: relative;
    overflow:hidden;
}

.boxtxt {
	position: relative;
  	top: 50%;
  	transform: translateY(-50%);
}

.credits p {
	font-size: 16px;
	font-weight: 300;
	color: white;
}

.Background {
	text-align: left;
  	padding: 0px 70px 0px 20px;
    height: 100%;
    width: 100%;
    position: absolute;
    color: white;
    background-image: url("../images/texture.jpg");
    background-size: cover;
}

.Background h1 {
	top: 0;
	opacity: 1;
    -webkit-transition: opacity 1s, transform 1s;
    transition: opacity 1s, transform 1s;
}

.foreground {
    position: absolute;
    bottom: -20%;
    height : 100%;
    width : 100%;
    border-radius: 10px;
    opacity: 0;
    -webkit-transition: bottom 1s, opacity 1s;
    transition: bottom 1s, opacity 1s;
}

.foreground p {
	color: white;
	text-align: left;
	padding-left: 20px;
}

.foreground strong {
	color: #e74c3c;
	text-shadow: 0px 0px 8px black;
	font-weight: 400;
}

.noTouch .boxes:hover {
	opacity: 1;
}

.noTouch .boxes:hover .Background h1 {
	opacity: 0;
	transform: translateY(-50px) scale(1.2);
}

.noTouch .boxes:hover .foreground {
	opacity: 1;
    bottom: 0;
    width:100%;
    height:100%;
}

.row .toggle {
	opacity: 1;
}

.toggle .Background h1 {
	opacity: 0;
	transform: translateY(-50px) scale(1.2);
}

.toggle .foreground {
	opacity: 1;
    bottom: 0;
    width:100%;
    height:100%;
}

#wood {
	background-image: url("../images/Sadpass/wood.jpg");
	background-size: cover;
	background-position: fixed;
}


#wood h1 {
	margin-top: 0px;
}

/*fly in animation */
.fly {
  opacity: 0;
  transition: all 1500ms ease-in-out;
  transform: translateY(100px) scale(1.05) translate3d(0, 0, 0);
}
 
.show-block {
  opacity: 1;
  transform: translateY(0) scale(1) translate3d(0, 0, 0);
}
/*end fly in */

.featurette-image{
	padding-top: 20%;
}

.links {
	text-align: center;
}

.youtube {
	text-align: center;
}


#videos {
	background-color: #B2B2B2;
	padding: 50px 0 0 0;
}



/* Responsive Styling */

@media (max-width: 1199px) { 

	.jumbotron h1 {
		font-size: 56px;
		margin-bottom: 30px;
	}

}

@media (max-width: 991px) { 

	a.ScrollTo {
		width:80px;
		height:80px;
		font-size:60px;
	}

	.jumbotron h1 {
		font-size: 44px;
	}

	.jumbotron p {
		padding: 0 10px;
	}

	#get-involved .col-md-4 {
		padding-top: 20px;
		padding-bottom: 20px;
	}

}

@media (max-width: 767px) { 

	.youtube iframe {
		width: 100%;
		height: 100%;
	}

	.frame {
		width: 100%;
		height: 56.25%;

	}	

	a.ScrollTo {
		width:60px;
		height:60px;
		font-size:40px;
	}

	.navbar-fixed-top {
		padding-right: 0px;
	}

	.jumbotron h1 {
		font-size: 24px;
	}

	.jumbotron p {
		font-size: 16px;
		padding: 0;
	}

	.btn-lg {
		font-size: 18px;
	}

	.homepage p {
		font-size: 18px;
	}

	footer img {
		width: 80%;
	}

}

